--- a/manifests/manifest.json
+++ b/manifests/manifest.json
@@ -31,22 +31,8 @@
           ],
           "otherContent": [
             {
-              "@type": "sc:AnnotationList",
-              "@id": "https://example.org/iiif/annotations/page1-inline",
-              "resources": [
-                {
-                  "@id": "https://example.org/iiif/annotation/comment/1",
-                  "@type": "oa:Annotation",
-                  "motivation": "commenting",
-                  "resource": {
-                    "@type": "dctypes:Text",
-                    "format": "text/plain",
-                    "language": "it",
-                    "value": "Dettaglio: volto del Cristo"
-                  },
-                  "on": "https://example.org/iiif/canvas/1#xywh=1500,900,1,1"
-                }
-              ]
+              "@id": "https://example.org/iiif/annotations/page1.json",
+              "@type": "sc:AnnotationList"
             }
           ]
         }
