--- a/manifests/manifest.json
+++ b/manifests/manifest.json
@@ -29,7 +29,7 @@
               "on": "https://example.org/iiif/canvas/1"
             }
           ],
-          "annotations": [
+          "otherContent": [
             {
               "@id": "https://raw.githubusercontent.com/asicuro/manifest-point-analysis/refs/heads/main/annotations/page1.json",
               "@type": "sc:AnnotationList"
