--- a/manifests/manifest.json
+++ b/manifests/manifest.json
@@ -62,10 +62,9 @@
               "target": {
                 "source": "https://example.org/iiif/canvas/1",
                 "selector": {
-                  "type": "FragmentSelector",
-                  "conformsTo": "http://www.w3.org/TR/media-frags/",
-                  "value": "xywh=1490,890,20,20"
-                }
+                    "type": "SvgSelector",
+                    "value": "<svg xmlns='http://www.w3.org/2000/svg'><circle cx='1500' cy='900' r='10' fill='#ff0000' stroke='#000000' stroke-width='2'/></svg>"
+                 }
               }
             }
           ]
