--- a/manifests/manifest.json
+++ b/manifests/manifest.json
@@ -1,21 +1,22 @@
 {
-  "id": "https://example.org/iiif/manifest.json",
+  "@context": "http://iiif.io/api/presentation/3/context.json",
+  "id": "https://example.org/iiif/manifest/masaccio-colored-pin",
   "type": "Manifest",
-  "label": { "en": [ "Masaccio – Annotazione puntuale" ] },
+  "label": { "en": ["Masaccio – Annotazione con Pin Rosso"] },
   "items": [
     {
       "id": "https://example.org/iiif/canvas/1",
       "type": "Canvas",
       "width": 3024,
       "height": 3885,
-      "label": { "en": [ "Masaccio – Trinità" ] },
+      "label": { "en": ["Masaccio – Trinità"] },
       "items": [
         {
           "id": "https://example.org/iiif/page/1/painting",
           "type": "AnnotationPage",
           "items": [
             {
-              "id": "https://example.org/iiif/annotation/1",
+              "id": "https://example.org/iiif/annotation/painting/1",
               "type": "Annotation",
               "motivation": "painting",
               "body": {
@@ -54,7 +55,7 @@
                 },
                 {
                   "type": "TextualBody",
-                  "value": "Color: #afff38",
+                  "value": "Color: #ff0000",
                   "purpose": "describing",
                   "format": "text/plain"
                 }
@@ -62,15 +63,14 @@
               "target": {
                 "source": "https://example.org/iiif/canvas/1",
                 "selector": {
-                    "type": "SvgSelector",
-                    "value": "<svg xmlns='http://www.w3.org/2000/svg'><circle cx='1500' cy='900' r='10' fill='#ff0000' stroke='#000000' stroke-width='2'/></svg>"
-                 }
+                  "type": "SvgSelector",
+                  "value": "<svg xmlns=\"http://www.w3.org/2000/svg\"><circle cx=\"1500\" cy=\"900\" r=\"10\" fill=\"#ff0000\" stroke=\"#000000\" stroke-width=\"2\"/></svg>"
+                }
               }
             }
           ]
         }
       ]
     }
-  ],
-  "context": "http://iiif.io/api/presentation/3/context.json"
+  ]
 }
