--- a/manifests/manifest.json
+++ b/manifests/manifest.json
@@ -64,7 +64,7 @@
                 "source": "https://example.org/iiif/canvas/1",
                 "selector": {
                   "type": "SvgSelector",
-                  "value": "<svg xmlns=\"http://www.w3.org/2000/svg\"><circle cx=\"1500\" cy=\"900\" r=\"10\" fill=\"#ff0000\" stroke=\"#000000\" stroke-width=\"2\"/></svg>"
+                  "value": "<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox='1490 890 20 20'><circle cx=\"1500\" cy=\"900\" r=\"10\" fill=\"#ff0000\" stroke=\"#000000\" stroke-width=\"2\"/></svg>"
                 }
               }
             }
