--- a/manifests/manifest.json
+++ b/manifests/manifest.json
@@ -49,8 +49,8 @@
                 },
                 {
                   "type": "Image",
-                  "id": "https://www.hallofseries.com/wp-content/uploads/2023/08/The-Big-Bang-Theory4-930x620.webp",
-                  "format": "image/jpeg",
+                  "id": "https://m.media-amazon.com/images/I/61jQnaah+kL.png",
+                  "format": "image/png",
                   "purpose": "illustrating"
                 },
                 {
