--- a/manifests/manifest.json
+++ b/manifests/manifest.json
@@ -48,11 +48,11 @@
                   "format": "text/html"
                 },
                 {
-                  "type": "Image",
-                  "id": "https://m.media-amazon.com/images/I/61jQnaah+kL.png",
-                  "format": "image/png",
-                  "purpose": "illustrating"
-                },
+                  "type": "TextualBody",
+                  "value": "<img src='https://m.media-amazon.com/images/I/61jQnaah+kL.png' width='150'/>",
+                  "format": "text/html",
+                  "purpose": "commenting"
+                },                
                 {
                   "type": "TextualBody",
                   "value": "Color: #ff0000",
